# sd-rest-restaurant

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/services/: CMakeLists.txt  db.h  service.h
src/services/authentification-service/: auth-db.cpp  auth-db.h  auth.cpp  auth.h  db.cpp  db.h
src/services/orders-processing-service/: orders-db.cpp  orders-db.h  orders.cpp  orders.h
src/test/: CMakeLists.txt  test.cpp  test.h
